re PR objc/25328 (ICE in get_indirect_ref_operands, at tree-ssa-operands.c:1453)

PR objc/25328
	* c-typeck.c (comptypes): If objc_comptypes returned < 0,
	but TYPE_MODE or TYPE_REF_CAN_ALIAS_ALL differs between t1
	and t2, make sure 0 is returned.

	* objc/execute/pr25328.m: New test.

From-SVN: r108982